# avulsionprecursors

./: .env.example  .gitignore  Fig4_plot1_data.json  LICENSE  README.md  basic_model_20250202_164836.joblib  main.py  pyproject.toml
avulsionprecursors/analysis/: LISA.py  (+11 more)
data/: ANJOBONY_recalculated_edited.csv  ANJOBONY_width_standardized.csv  ARG_LAKE_2_recalculated_edited.csv  ARG_LAKE_2_width_standardized.csv  B14_2_recalculated_edited.csv  B14_2_width_standardized.csv  BEMARIVO_recalculated_edited.csv  BEMARIVO_width_standardized.csv  COLOMBIA_2011_2_recalculated_edited.csv  COLOMBIA_2011_2_width_standardized.csv  LILONGWE_recalculated_edited.csv  LILONGWE_width_standardized.csv  MANGOKY_recalculated_edited.csv  MANGOKY_width_standardized.csv  MUSA_recalculated_edited.csv  MUSA_width_standardized.csv  RUVU_2_recalculated_edited.csv  RUVU_2_width_standardized.csv  TURKWEL_recalculated_edited.csv  TURKWEL_width_standardized.csv  V11_2_recalculated_edited.csv  V11_2_width_standardized.csv  V7_2_recalculated_edited.csv  V7_2_width_standardized.csv  VENEZ_2022_N_recalculated_edited.csv  VENEZ_2022_N_width_standardized.csv  VENEZ_2023_recalculated_edited.csv  VENEZ_2023_width_standardized.csv  all_elevations_gdf_ANJOBONY.parquet  all_elevations_gdf_ARG_LAKE_2.parquet  all_elevations_gdf_BEMARIVO.parquet  all_elevations_gdf_LILONGWE.parquet  all_elevations_gdf_TURKWEL.parquet  all_elevations_gdf_V11_2_joined.parquet  all_elevations_gdf_V7_2.parquet  all_elevations_gdf_VENEZ_2022_N.parquet  all_elevations_gdf_VENEZ_2023.parquet  data_dict.json
tests/: test_labeling.py
(+30 files in other folders)
